syntax = "proto3";
package protocol;
import "packet.proto";

// ghost service for vm

message ghost_userasset {
    uint64 uuid = 1;
    uint64 revision = 2;
    string asset = 3;
}

message register_vm_req {
    string division = 1;
    string version = 2;
}

message register_vm_rsp {
    int32 result = 1;
    uint64 vmid = 2;
    uint64 hostid = 3;
    string desc = 4;
}

message unregister_vm_req {
    string division = 1;
    string version = 2;
    uint64 vmid = 3;
    uint64 hostid = 4;
    string desc = 5;
}

message unregister_vm_rsp {
    int32 result = 1;
    string desc = 2;
}

message bind_session_req {
    string division = 1;
    uint64 sessionid = 2;
    uint64 uuid = 3;
}

message bind_session_rsp {
    int32 result = 1;
    string division = 2;
    uint64 sessionid = 3;
    uint64 uuid = 4;
}

message unbind_session_req {
    string division = 1;
    uint64 sessionid = 2;
    uint64 uuid = 3;
}

message unbind_session_rsp {
    int32 result = 1;
    string division = 2;
    uint64 sessionid = 3;
    uint64 uuid = 4;
}

message lock_userasset_req {
    string division = 1;
    uint64 sessionid = 2;
    int64 lock_duration = 3;
    ghost_userasset userasset = 4;
}

message lock_userasset_rsp {
    int32 result = 1;
    int64 lock_expired = 2;
    bool newbee = 3;
    ghost_userasset userasset = 4;
}

message unlock_userasset_req {
    uint64 sessionid = 1;
    ghost_userasset userasset = 2;
}

message unlock_userasset_rsp {
    int32 result = 1;
}

message debug_req {
    string division = 1;
    string cmdop = 2;
    string cmdparam = 3;
}

message debug_rsp {
    int32 result = 1;
    string desc = 2;
}

service GhostService {
    // vm management
    rpc RegisterVM(register_vm_req) returns(register_vm_rsp) {}
    rpc UnregisterVM(unregister_vm_req) returns(unregister_vm_rsp) {}

    // session bind & unbind with uuid(user unique id)
    rpc BindSession(bind_session_req) returns(bind_session_rsp) {}
    rpc UnbindSession(unbind_session_req) returns(unbind_session_rsp) {}

    // user asset lock & unlock
    rpc LockUserAsset(lock_userasset_req) returns(lock_userasset_rsp) {}
    rpc UnlockUserAsset(unlock_userasset_req) returns(unlock_userasset_rsp) {}

    // debug
    rpc Debug(debug_req) returns(debug_rsp) {}
}

// vm service

message notify_status_req {
    uint32 status = 1;
}

message notify_status_rsp {
    int32 result = 1;
    string desc = 2;
}

service VMService {
    rpc NotifyStatus(notify_status_req) returns(notify_status_rsp) {}
    rpc Push(stream session_packet) returns(stream_session_packet_rsp) {}
    rpc Pull(stream_session_packet_req) returns(stream session_packet) {}
}
